--- a/app/views/jasminerice/spec/index.html.erb
+++ b/app/views/jasminerice/spec/index.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>Jasmine Spec Runner</title>
     <%= stylesheet_link_tag "jasmine" %>
-    <%= stylesheet_link_tag "spec", @asset_options.clone %>
+    <%= stylesheet_link_tag @specsuite, @asset_options.clone %>
     <%= javascript_include_tag "jasminerice" %>
     <%= javascript_include_tag @specsuite, @asset_options.clone %>
     <%= csrf_meta_tags %>
